--- a/APBD/app/src/main/res/layout/expense.xml
+++ b/APBD/app/src/main/res/layout/expense.xml
@@ -432,5 +432,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.851"
-        tools:cornerRadius="20" />
+        tools:cornerRadius="20"
+        android:onClick="alertKonfirmasi"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
