--- a/APBD/app/src/main/res/layout/income.xml
+++ b/APBD/app/src/main/res/layout/income.xml
@@ -233,5 +233,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.854"
-        tools:cornerRadius="20" />
+        tools:cornerRadius="20"
+        android:onClick="alertKonfirmasi"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
