--- a/APBD/app/src/main/res/layout/settings_page.xml
+++ b/APBD/app/src/main/res/layout/settings_page.xml
@@ -195,7 +195,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.799"
-        tools:cornerRadius="12" />
+        tools:cornerRadius="12"
+        android:onClick="alertKonfirmasi"/>
 
     <Switch
         android:id="@+id/switch1"
