--- a/APBD/app/src/main/res/layout/register_page.xml
+++ b/APBD/app/src/main/res/layout/register_page.xml
@@ -17,6 +17,7 @@
         android:scrollbarThumbHorizontal="@color/white"
         android:scrollbarThumbVertical="@color/white"
         android:text="Register"
+        android:onClick="goToLogin"
         android:textColor="#000000"
         android:textColorHighlight="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/buttonRegisterGoogle"
