--- a/APBD/app/src/main/res/layout/home.xml
+++ b/APBD/app/src/main/res/layout/home.xml
@@ -174,8 +174,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="280dp"
         android:layout_marginBottom="26dp"
-        app:srcCompat="@drawable/bookmark"
-        android:onClick="goToPlan"/>
+        app:srcCompat="@drawable/bookmark" />
 
     <TextView
         android:id="@+id/home2"
@@ -481,8 +480,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="357dp"
         android:layout_marginBottom="24dp"
-        app:srcCompat="@drawable/dashboard"
-        android:onClick="goToHome"/>
+        app:srcCompat="@drawable/dashboard" />
     <!-- Home -->
     <TextView
         android:id="@+id/home"
